--- a/style.css
+++ b/style.css
@@ -14,4 +14,5 @@ form {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #e6dcc8;
 }
